--- a/auth_multi_users.html
+++ b/auth_multi_users.html
@@ -34,6 +34,7 @@
     <h3>Inscription</h3> 
     <input type="email" id="signup-email" placeholder="Adresse email" />
     <input type="password" id="signup-password" placeholder="Mot de passe" />
+    <input type="text" id="signup-num" placeholder="Numéro de téléphone" />
     <button id="signup-btn" class="normal">Créer un compte</button>
     <p id="signup-message" style="color: red;"></p>
   </div>
