--- a/shop.html
+++ b/shop.html
@@ -176,8 +176,7 @@
                 </div>
                 <h4>${ad.price}€</h4>
             </div>
-            <a href="tel:${ad.number}">${ad.number}<i class="fal fa-shopping-cart cart"></i></a>
-            
+            <a href="https://wa.me/${ad.number}""><i class="fal fa-shopping-cart cart"></i></a>
             `;
             adsContainer.appendChild(adBox);
         });
