--- a/connexion.html
+++ b/connexion.html
@@ -30,22 +30,18 @@
     </div>
   </section>
 
-  <div id="signup-box">
-    <h3>Inscription</h3> 
-    <input type="email" id="signup-email" placeholder="Adresse email" />
-    <input type="password" id="signup-password" placeholder="Mot de passe" />
-    <input type="text" id="signup-num" placeholder="Numéro de téléphone" />
-    <p>Note 1: Veuillez utiliser un numéro avec l'indicatif international.( ex:+243) </p>
-    <p>Note 2: le numéro doit être valide avec whatsapp.</p>
-    <button id="signup-btn" class="normal">Créer un compte</button>
-    <p id="signup-message" style="color: red;"></p>
-  </div>
 
-  
+  <div id="login-box">
+    <h3>Connexion</h3> 
+    <input type="email" id="email" placeholder="Adresse email">
+    <input type="password" id="password" placeholder="Mot de passe">
+    <button id="login-btn" class="normal">Se connecter</button>
+    <p id="message" style="color: red;"></p>
+  </div>
 
 
   <!-- ✅ Firebase avec modules -->
-  <script type="module" src="auth_multi.js"></script>
+  <script type="module" src="connect.js"></script>
     
   
 
