--- a/dashboard.html
+++ b/dashboard.html
@@ -1,38 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Ecommerce</title>
-  <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" />
-  <link rel="stylesheet" href="style.css">
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Tableau de Bord </title>
+        <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" />
+        <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
+        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="search_bar.css">
+    </head>
 
-<body>
+    <body>
 
-<section id="header">
-  <a href="#"><img src="img/logo.png" alt="" class="logo"></a>
-  <div>
-    <ul id="navbar">
-      <li><a href="index.html">Home</a></li>
-      <li><a href="shop.html">Shop</a></li>
-      <li><a href="blog.html">Blog</a></li>
-      <li><a href="about.html">about</a></li>
-      <li><a href="contact.html">contact</a></li>
-      <li id="bag"><a href="cart.html"><i class="fa fa-shopping-bag" aria-hidden="true"></i></a></li>
-      <a href="#" id="close"><i class="far fa-times"></i></a>
-    </ul>
-  </div>
-  <div class="mobile">
-    <a href="cart.html"><i class="fas fa-shopping-bag" aria-hidden="true"></i></a>
-    <i id="bar" class="fas fa-outdent"></i>
-  </div>
-</section>
+    <section id="header">
+        <p class="logoTexte" title="Home Page"><span id="E-logo">E</span>-Teka</p>
+
+        <div class="search">
+                <i class="fa fa-search" id="search-icon" title="cliquez pour Rechercher un produit"></i>
+                <input type="text" id="search-bar" placeholder="Recherche" class="form-control" >
+          <div class="filtre">
+            <select id="sort-ads" class="form-control">
+                <option value="" title="Tous les produits"></option>
+                <option value="Electronics" title="Produits électroniques">Electronics</option>
+                <option value="Habillement" title="Vêtements et accessoires">Habillement</option>
+                <option value="Voiture" title="Véhicules et accessoires">Voiture</option>
+                <option value="Immobilier" title="Biens immobiliers">Immobilier</option>
+            </select>
+          </div>
+        </div>
+
+
+        <div>
+            <ul id="navbar">
+                <li><a href="connexion.html"><i class="fa fa-user-circle" aria-hidden="true" title="Se connecter"></i></a></li>
+                <li><a href="#"><i class="fa fa-shopping-cart" aria-hidden="true" title="Mon panier"></i></a></li>
+                <li><a href="auth_multi_users.html">S'enregistrer</a></li>
+                <li><a href="#">Deals</a></li>
+                <li><a href="contact.html">Aide</a></li>
+                <a href="#" id="close"><i class="far fa-times"></i></a>
+            </ul>
+        </div>
+
+        <div class="mobile">
+            <a href="connexion.html"><i class="fa fa-user-circle" aria-hidden="true" title="Se connecter"></i></a>
+            <a href="#"><i class="fa fa-shopping-cart" aria-hidden="true" title="Mon panier"></i></a>
+            <i id="bar" class="fa fa-bars" aria-hidden="true" title="Menu"></i>
+
+        </div>
+    </section>
 
 <div class="posting">
-  <h5 style="text-align: center;">Bienvenue, <span id="user-name"></span> !</h5>
+  <h3 class="connecteH3">Bienvenue, <span id="user-name"></span> !</h3>
+ 
   <button id="logout-btn" class="normal" style="background-color: rgb(122, 35, 35); color: white; margin-top: 15px;">Déconnexion</button>
 
   <div class="posting-form">
@@ -57,9 +78,59 @@
 
 <div id="product1" class="section-p1"></div>
 
+<hr>
+
+<footer class="section-p1">
+        <p class="logoTexte" title="Home Page" style="user-select: none;"><span id="E-logo">E</span>-Teka</p>
+        <div class="col">
+            
+            <h4>Contact</h4>
+            <p><strong>Address:</strong> 123 Street, New York, USA</p>
+            <p><strong>Phone:</strong> +01 234 567 88</p>
+            <p><strong>Hours:</strong> 10:00 - 18:00, Mon - Sat</p>
+            <div class="follow">
+                <h4>Follow us</h4>
+                <div class="icon">
+                    <i class="fab fa-facebook-f"></i>
+                    <i class="fab fa-instagram"></i>
+                    <i class="fab fa-twitter"></i>
+                    <i class="fab fa-pinterest"></i>
+                    <i class="fab fa-youtube"></i>
+                </div>
+            </div>
+        </div>
+        <div class="col">
+            <h4>About</h4>
+            <a href="#">About Us</a>
+            <a href="#">Delivery Information</a>
+            <a href="#">Privacy Policy</a>
+            <a href="#">Terms & Conditions</a>
+            <a href="#">Contact Us</a>
+        </div>
+        <div class="col">
+            <h4>My Account</h4>
+            <a style="color: rgb(179, 160, 77);" href="connexion.html"><b>Se connecter</b></a>
+        </div>
+        <div class="col install">
+            <h4>Install App</h4>
+            <p>From App Store or Google Play</p>
+            <div class="row">
+                <img src="img/pay/app.jpg" alt="">
+                <img src="img/pay/play.jpg" alt="">
+            </div>
+            <p>Secured Payment Gateways</p>
+            <img src="img/pay/pay.png" alt="">
+        </div>
+        <div class="copyright">
+            <p>&copy; 2025, Ecommerce Store. All Rights Reserved.</p>
+            <p>Designed by <span>TECHNOWEB</span></p>
+        </div>
+    </footer>
+
 <script type="module" src="realtime.js"></script>
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+<script  src="script.js"></script>
 
 </body>
 </html>
