--- a/sproduct.html
+++ b/sproduct.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>product </title>
+        <title>Single product</title>
         <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" />
         <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
         <link rel="stylesheet" href="style.css">
@@ -17,7 +17,7 @@
     <section id="header">
         <p class="logoTexte" title="Home Page"><span id="E-logo">E</span>-Teka</p>
 
-        <div class="search">
+       <!--<div class="search">
                 <i class="fa fa-search" id="search-icon" title="cliquez pour Rechercher un produit"></i>
                 <input type="text" id="search-bar" placeholder="Recherche" class="form-control" >
           <div class="filtre">
@@ -29,23 +29,23 @@
                 <option value="Immobilier" title="Biens immobiliers">Immobilier</option>
             </select>
           </div>
-        </div>
+        </div> --> 
 
 
         <div>
             <ul id="navbar">
                 <li><a href="connexion.html"><i class="fa fa-user-circle" aria-hidden="true" title="Se connecter"></i></a></li>
                 <li><a href="#"><i class="fa fa-shopping-cart" aria-hidden="true" title="Mon panier"></i></a></li>
-                <li><a href="auth_multi_users.html">S'enregistrer</a></li>
-                <li><a href="#">Deals</a></li>
-                <li><a href="contact.html">Aide</a></li>
+                <li><a href="index.html"><i class="fa fa-home" aria-hidden="true"></i></a></li>
+                <li><a href="contact.html"><i class="fa fa-phone-square" aria-hidden="true"></i></a></li>
                 <a href="#" id="close"><i class="far fa-times"></i></a>
+                <li><a href="#">Deals</a></li>
             </ul>
         </div>
 
         <div class="mobile">
             <a href="connexion.html"><i class="fa fa-user-circle" aria-hidden="true" title="Se connecter"></i></a>
-            <a href="#"><i class="fa fa-shopping-cart" aria-hidden="true" title="Mon panier"></i></a>
+            <a href="index.html"><i class="fa fa-home" aria-hidden="true"></i></a>
             <i id="bar" class="fa fa-bars" aria-hidden="true" title="Menu"></i>
 
         </div>
@@ -173,7 +173,7 @@
         </div>
     </section>
 
-    <footer class="section-p1">
+       <footer class="section-p1">
         <p class="logoTexte" title="Home Page" style="user-select: none;"><span id="E-logo">E</span>-Teka</p>
         <div class="col">
             
@@ -193,25 +193,25 @@
             </div>
         </div>
         <div class="col">
-            <h4>About</h4>
-            <a href="#">About Us</a>
-            <a href="#">Delivery Information</a>
-            <a href="#">Privacy Policy</a>
-            <a href="#">Terms & Conditions</a>
-            <a href="#">Contact Us</a>
+            <h4>A propos</h4>
+            <a href="about.html">A propos</a>
+            <a href="#">Informations de livraison</a>
+            <a href="#">Politique de confidentialité</a>
+            <a href="#">Conditions générales</a>
+            <a href="contact.html">Nous contacter</a>
         </div>
         <div class="col">
-            <h4>My Account</h4>
+            <h4>Mon Compte</h4>
             <a style="color: rgb(179, 160, 77);" href="connexion.html"><b>Se connecter</b></a>
         </div>
         <div class="col install">
-            <h4>Install App</h4>
-            <p>From App Store or Google Play</p>
+            <h4>Installer l'App</h4>
+            <p>Depuis l'App Store ou Google Play</p>
             <div class="row">
                 <img src="img/pay/app.jpg" alt="">
                 <img src="img/pay/play.jpg" alt="">
             </div>
-            <p>Secured Payment Gateways</p>
+            <p>Passerelles de paiement sécurisées</p>
             <img src="img/pay/pay.png" alt="">
         </div>
         <div class="copyright">
