update phone num

--- a/auth_multi_users.html
+++ b/auth_multi_users.html
@@ -59,8 +59,10 @@
     <button id="signup-btn" class="normal">Créer un compte</button>
     <p id="signup-message" style="color: red;"></p>
   </div>
-  <p class="notice">Note 1: Veuillez utiliser un numéro avec l'indicatif international.( ex:+243) </p>
-  <p class="notice">Note 2: le numéro doit être valide avec whatsapp.</p>
+  <section class="section-p1">
+    <p class="notice" style="text-align: justify;">Note 1: Veuillez utiliser un numéro avec l'indicatif international.( ex:+243) </p>
+    <p class="notice" style="text-align: justify;">Note 2: le numéro doit être valide avec whatsapp.</p>
+  </section>
 
   <hr>
 
