--- a/auth_multi_users.html
+++ b/auth_multi_users.html
@@ -60,8 +60,8 @@
     <p id="signup-message" style="color: red;"></p>
   </div>
   <section class="section-p1">
-    <p class="notice" style="text-align: justify;">Note 1: Veuillez utiliser un numéro avec l'indicatif international.( ex:+243) </p>
-    <p class="notice" style="text-align: justify;">Note 2: le numéro doit être valide avec whatsapp.</p>
+    <p class="notice" style="text-align: center;">Note 1: Veuillez utiliser un numéro avec l'indicatif international.( ex:+243) </p>
+    <p class="notice" style="text-align: center;">Note 2: le numéro doit être valide avec whatsapp.</p>
   </section>
 
   <hr>
