--- a/about.html
+++ b/about.html
@@ -8,6 +8,7 @@
         <title>A propos</title>
         <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" />
         <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
+        <link rel="stylesheet" href="https://www.w3schools.com/w3css/5/w3.css">
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="search_bar.css">
     </head>
@@ -162,11 +163,14 @@
         <div class="copyright">
             <p>&copy; 2025, Ecommerce Store. All Rights Reserved.</p>
             <p>Designed by <span>TECHNOWEB</span></p>
+            <div id="user-name">Loading your name...</div>
         </div>
+        
     </footer>
 
 
         <script src="script.js"></script>
+
     </body>
 
 </html>
